# actix-web

./: Cargo.toml  debuy.txt  request.rest
src/: config.rs  db.rs  main.rs  routes.rs
src/config/: index.rs
src/db/: Object.rs  User.rs
src/functions/: AuthenticateUser.rs  GetObject.rs  Join.rs
src/routes/: designers.rs  paintings.rs  vendors.rs
