[package]
name = "kaladhaar_backend"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "1.4.0", features = ["time"] }
actix-web = "4.0.0-beta.5"
jwt = "0.15.0"
argon2 = "0.3.1"
rand_core = { version = "0.6", features = ["std"] }
mongodb = "2.0.0"
bson = "2.0.0"
futures = "0.3.17"
hmac = "0.11.0"
sha2 = "0.9.8"
serde = "1.0.130"